# dms10_config

./: Cargo.toml
debian/: changelog  control  copyright  rules
debian/source/: options
src/: console.rs  fetcher.rs  main.rs
