[package]
name = "dms10_config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.5"
log = "0.4.22"
rpassword = "7.3.1"


[dependencies.clap]
version = "4.5.15"
features = [ "derive" ]

[dependencies.tokio]
version = "1.40"
features = [ "io-util", "macros", "process", "rt-multi-thread", "signal", "time" ]
